lugaresProximos-v1.2
Agora é possível que o usuário informe a avaliação mínima do estabelecimento, para que seja mostrado do Google Maps apenas locais com avaliação igual ou superior a escolhida.